if you hover over the butt in button for too long, you're told to stop it

--- a/public/style.css
+++ b/public/style.css
@@ -447,6 +447,8 @@ button {
 @media (prefers-reduced-transparency: reduce) {
 	main {
 		backdrop-filter: unset !important;
+		-webkit-backdrop-filter: unset !important;
+		background: unset;
 		background-color: black;
 	}
 }
